--- a/frontend/src/layouts/chats/style.css
+++ b/frontend/src/layouts/chats/style.css
@@ -71,7 +71,7 @@ button {
 }
 
 button:hover {
-  background-color: #0056b3;
+  background-color:  #FDD700;
 }
 .css-1l4uw88 > h2,
 h4,
@@ -79,8 +79,12 @@ h6,
 .MuiGrid-root {
   font-size: 15px !important;
 }
+.sendIcon1{
+  position: relative;
+  left: -25px;
+}
 .textareaStyle {
-  width: 65%;
+  width: 100%;
   color: #444;
   font-family: arial;
   font-size: 1rem !important;
@@ -89,6 +93,9 @@ h6,
   border: 1px solid #ccc;
   background: transparent;
   resize: initial;
+}
+.textareaStyle::placeholder{
+  padding-top: 5px;
 }
 
 .textareaStyle:focus,
