--- a/frontend/src/layouts/chats/style.css
+++ b/frontend/src/layouts/chats/style.css
@@ -97,8 +97,28 @@ h6,
 .textareaStyle::placeholder{
   padding-top: 5px;
 }
+.uploadfilebtn{
+  background: black;
+  color: #FDD700;
+  width: 95%;
+  margin-left: 12px
+}
+.uploadfilebtn:hover{
+  background: black !important;
+}
 
 .textareaStyle:focus,
 .textareaStyle:hover {
   outline: none;
+}
+.adminDiv2{
+  display: flex;
+}
+.adminImg1{
+  width: 30%;
+  padding: 5px;
+}
+.TickImg1{
+  margin-top: 10px;
+  padding: 5px;
 }
