--- a/frontend/src/layouts/chats/style.css
+++ b/frontend/src/layouts/chats/style.css
@@ -9,11 +9,21 @@
 }
 
 .chat {
-  flex-grow: 1;
+  /* flex-grow: 1; */
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
-  padding: 10px;
+  /* overflow-y: auto;
+  padding: 10px; */
+  height: 80vh;
+  overflow: scroll;
+}
+.chat::-webkit-scrollbar {
+  width: 10px;
+  height: 0;
+}
+
+.chat::-webkit-scrollbar-thumb {
+  background-color: #888;
 }
 
 .message {
