--- a/frontend/src/layouts/chats/style.css
+++ b/frontend/src/layouts/chats/style.css
@@ -17,6 +17,7 @@
   padding: 10px; */
   height: 87vh;
   overflow: scroll;
+  padding:0 5px ;
 }
 .chat::-webkit-scrollbar {
   width: 10px;
@@ -28,11 +29,7 @@
 }
 
 .message {
-  max-width: 98%;
-  margin: 5px;
   width: 100%;
-  padding: 10px;
-  border-radius: 8px;
 }
 
 .message-content {
@@ -91,10 +88,11 @@ h6,
   font-size: 15px !important;
 }
 .sendIcon1{
-  position: relative;
-  left: -25px;
+  position: absolute;
+  right: 25px;
 }
 .textareaStyle {
+  position: relative;
   width: 100%;
   color: #444;
   font-family: arial;
@@ -104,9 +102,10 @@ h6,
   border: 1px solid #ccc;
   background: transparent;
   resize: initial;
+  
 }
 .textareaStyle::placeholder{
-  padding-top: 5px;
+  padding-top: 0px;
 }
 .uploadfilebtn{
   background: black;
