--- a/frontend/src/layouts/chats/style.css
+++ b/frontend/src/layouts/chats/style.css
@@ -17,6 +17,7 @@
   height: 80vh;
   overflow: scroll;
 }
+
 .chat::-webkit-scrollbar {
   width: 10px;
   height: 0;
@@ -39,6 +40,7 @@
   font-family: Arial, Helvetica, sans-serif;
   background: white;
 }
+
 .ff {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -81,18 +83,21 @@ button {
 }
 
 button:hover {
-  background-color:  #FDD700;
+  background-color: #FDD700;
 }
-.css-1l4uw88 > h2,
+
+.css-1l4uw88>h2,
 h4,
 h6,
 .MuiGrid-root {
   font-size: 15px !important;
 }
-.sendIcon1{
+
+.sendIcon1 {
   position: relative;
   left: -25px;
 }
+
 .textareaStyle {
   width: 100%;
   color: #444;
@@ -104,16 +109,19 @@ h6,
   background: transparent;
   resize: initial;
 }
-.textareaStyle::placeholder{
+
+.textareaStyle::placeholder {
   padding-top: 5px;
 }
-.uploadfilebtn{
+
+.uploadfilebtn {
   background: black;
   color: #FDD700;
   width: 95%;
   margin-left: 12px
 }
-.uploadfilebtn:hover{
+
+.uploadfilebtn:hover {
   background: black !important;
 }
 
@@ -121,14 +129,34 @@ h6,
 .textareaStyle:hover {
   outline: none;
 }
-.adminDiv2{
+
+.adminDiv2 {
   display: flex;
 }
-.adminImg1{
+
+.adminImg1 {
   width: 30%;
   padding: 5px;
 }
-.TickImg1{
+
+.userName1 {
+  font-size: 13px !important;
+}
+
+.date1 {
+  font-size: 11px;
+}
+
+.TickImg1 {
   margin-top: 10px;
   padding: 5px;
+}
+
+.desc1 {
+  font-size: 12px;
+}
+
+.selectType1 {
+  margin: 6px;
+  border-radius: 5px;
 }
