--- a/frontend/src/layouts/chats/style.css
+++ b/frontend/src/layouts/chats/style.css
@@ -160,3 +160,14 @@ h6,
   margin: 6px;
   border-radius: 5px;
 }
+
+.fileImg1 {
+  width: 100%;
+  height: 100px;
+}
+
+.imageContainer {
+  width: 200px;
+  height: 200px;
+  overflow: hidden;
+}
