--- a/frontend/src/layouts/chats/style.css
+++ b/frontend/src/layouts/chats/style.css
@@ -14,7 +14,9 @@
   flex-direction: column;
   /* overflow-y: auto;
   padding: 10px; */
-  height: 80vh;
+  height: 68vh;
+  padding-block:5px;
+  padding-inline:5px;
   overflow: scroll;
 }
 
@@ -37,7 +39,7 @@
 
 .message-content {
   word-wrap: break-word;
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
   background: white;
 }
 
@@ -93,11 +95,6 @@ h6,
   font-size: 15px !important;
 }
 
-.sendIcon1 {
-  position: relative;
-  left: -25px;
-}
-
 .textareaStyle {
   width: 100%;
   color: #444;
@@ -105,13 +102,18 @@ h6,
   font-size: 1rem !important;
   border-radius: 5px;
   padding: 2px 8px;
-  border: 1px solid #ccc;
-  background: transparent;
+  background-color: white;
+  border-color: transparent;
+  border-radius: 0px;
+  padding: 5px;
+  margin-left: 27px;
   resize: initial;
 }
-
 .textareaStyle::placeholder {
   padding-top: 5px;
+  font-style: italic;
+  font-size: 13px;
+  color:  #C6C3B6;
 }
 
 .uploadfilebtn {
