--- a/frontend/src/examples/brand-table/brand-table.css
+++ b/frontend/src/examples/brand-table/brand-table.css
@@ -34,5 +34,8 @@
   .mi-table .category-list li{
       padding-inline-start: 56px;
   }
+  .formstyle::placeholder {
+    color : #ccc
+  }
     
   
