--- a/frontend/src/layouts/chats/style.css
+++ b/frontend/src/layouts/chats/style.css
@@ -179,6 +179,23 @@ h6,
   font-size: 12px;
 }
 
+.selectType2 {
+  margin: 6px 6px 6px 0px;
+  border-radius: 1px;
+  outline: 0;
+  font-family: "Poppins";
+  font-size: 12px;
+  padding: 7px 0;
+  text-align: center;
+  border: 2px solid lightcyan;
+}
+
+.optionType2 {
+  padding: 5px 0;
+  border: 2px solid lightcyan;
+
+}
+
 .fileImg1 {
   width: 100%;
   height: 60px;
@@ -238,8 +255,8 @@ h6,
 }
 
 .filesGrid {
-  max-height: 430px;
-  height: 430px;
+  max-height: 227px;
+  height: 227px;
   overflow: auto;
 }
 
@@ -257,7 +274,7 @@ h6,
   background: transparent !important;
   width: 30% !important;
   height: 30% !important;
-  top: 45% !important;
+  top: 33% !important;
   left: 63% !important;
   border-radius: 10px !important;
 }
