--- a/frontend/src/layouts/chats/style.css
+++ b/frontend/src/layouts/chats/style.css
@@ -10,6 +10,7 @@
   overflow-y: auto;
 }
 
+
 .chat-2 {
   display: flex;
   flex-direction: column;
@@ -88,7 +89,7 @@ button:hover {
   background-color: #fdd700;
 }
 
-.css-1l4uw88 > h2,
+.css-1l4uw88>h2,
 h4,
 h6,
 .MuiGrid-root {
@@ -191,14 +192,15 @@ h6,
   border-radius: 1px;
   outline: 0;
   font-family: "Poppins";
-  padding : 4px 12px;
+  padding: 4px 12px;
   font-size: 12px;
 }
 
 .addnewversion {
-  margin:  5px 5px !important;
+  margin: 5px 5px !important;
   padding: 4px 12px !important;
 }
+
 .addnewversion:hover {
   background: #dcdccf !important;
 }
@@ -351,4 +353,26 @@ h6,
   opacity: 1 !important;
   font-size: 27px !important;
   font-weight: 100 !important;
+}
+
+.headesidebar {
+  display: none !important;
+}
+
+.headersidebardiv {
+  display: none;
+}
+
+@media screen and (max-width: 1200px) {
+  .headesidebar {
+    display: flex !important;
+  }
+
+  .headersidebardiv {
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    margin-bottom: 5px;
+  }
+
 }
