--- a/frontend/src/layouts/dashboard/status-box/status-style.css
+++ b/frontend/src/layouts/dashboard/status-box/status-style.css
@@ -1,3 +1,70 @@
+root {
+    --font-family: "Poppins", sans-serif !important;
+    --text-color : #333333;
+  }
+.status-container {
+    justify-content:center; 
+    gap:12px;
+}
+
 .status-box:hover .heading-style:hover {
     color: #000 !important;
+}
+
+.itemStyles  {
+    border: 2px solid #C6C3B6;
+    width: 100%;
+    padding: 5px;
+    padding-inline: 4.5rem;
+    cursor: pointer;
+    height: 218px;
+}
+
+.itemStyles:hover {
+    background-color: #FDD700 !important;
+    color: #000 !important;
+}
+
+.heading-style {
+    font-size: 8rem !important;
+    font-weight: 800 !important;
+    color: #C6C3B6 !important;
+    text-align : center;
+}
+
+.heading-style-2 {
+    font-size: 1.38rem !important;
+    color : var(--text-color);
+    font-family : var(--font-family) ;
+    font-weight : 400 !important;
+}
+
+@media screen and (max-width:768px) {
+    .status-container {
+        gap:21px;
+        margin-top: 17px;
+    }
+    .itemStyles {
+        height: 175px;
+    }
+    .heading-style {
+        font-size: 6rem !important;
+    }
+}
+@media screen and (max-width:500px) {
+    .box-container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .itemStyles {
+        width: 70%;
+        height: 130px;
+    }
+    .heading-style {
+        font-size: 4.3rem !important;
+    }
+    .heading-style-2 {
+        font-size: 1.08rem !important;
+    }
 }
