--- a/frontend/src/examples/image-modal/image-modal.css
+++ b/frontend/src/examples/image-modal/image-modal.css
@@ -32,14 +32,28 @@
   width: 100%;
   height: auto;
   object-fit: contain;
-  aspect-ratio: 1;
+  aspect-ratio: 1.1;
 }
 
+@media screen and (min-width: 1600px) {
+  .image-slider img {
+    aspect-ratio: 1.7;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .image-slider img {
+    aspect-ratio: 1.3;
+  }
+}
 @media screen and (max-width: 768px) {
   .handle-container {
     justify-content: space-between;
   }
   .image-slider {
     max-width: 600px;
+  }
+  .image-slider img {
+    aspect-ratio: 1.4;
   }
 }
