--- a/frontend/src/layouts/chats/style.css
+++ b/frontend/src/layouts/chats/style.css
@@ -1,5 +1,12 @@
 /* Chat.css */
 
+:root {
+  --fonts-family: "Poppins", sans-serif;
+  --yellow-text-color: #333333;
+  --header-color: #f6f6e8;
+  --yellow-color: #fdd700;
+}
+
 .chat {
   display: flex;
   flex-direction: column;
@@ -9,7 +16,6 @@
   padding-block-end: 30px;
   overflow-y: auto;
 }
-
 
 .chat-2 {
   display: flex;
@@ -88,7 +94,7 @@ button:hover {
   background-color: #fdd700;
 }
 
-.css-1l4uw88>h2,
+.css-1l4uw88 > h2,
 h4,
 h6,
 .MuiGrid-root {
@@ -162,11 +168,6 @@ h6,
   display: flex;
   align-items: center;
   height: 100%;
-}
-
-.adminImg1 {
-  width: 45%;
-  padding: 5px;
 }
 
 .userName1 {
@@ -266,7 +267,7 @@ h6,
   border: 2px solid lightcyan;
 }
 
-.fileImg1 {
+.file-image-container .fileImg1 {
   width: 100%;
   height: 60px;
   cursor: pointer;
@@ -280,25 +281,27 @@ h6,
 
 .deleteIcon {
   color: red;
-  position: relative;
-  left: -70px;
+  position: absolute !important;
+  top: 0px;
+  left: 1px;
   cursor: pointer;
 }
 
 .deleteIcon:hover {
-  background-color: #dddfe2;
+  background-color: #dddfe2 !important;
   border-radius: 30px;
-  padding: 0 5px;
 }
 
 .nofilefoundDiv {
   color: #a4a4a5;
   text-align: center;
   width: 100%;
-  padding: 25px;
+  /* padding: 25px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
+  position: absolute;
+  top: 40%;
 }
 
 .loaderfile {
@@ -338,6 +341,9 @@ h6,
   max-height: 41vh;
   height: 30vh;
   overflow: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 8px;
 }
 .chat-parent-container::-webkit-scrollbar {
   width: 8px;
@@ -421,7 +427,86 @@ h6,
   display: none;
 }
 
+/* --- New CSS */
+.filesGrid {
+  margin: 5px;
+}
+.upload-file-main {
+  padding-block: 16px;
+}
+
+.filesGrid .file-grid-item {
+  border: 5px solid #f6f6e8;
+  grid-template-columns: 1fr;
+  max-width: 100%;
+}
+
+/* --- New CSS */
+
+.project-details {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  width: 100%;
+  background-color: var(--header-color);
+}
+.project-details-3 {
+  grid-template-columns: repeat(1, 1fr);
+
+}
+.project-details .project-details-div {
+  font-family: var(--fonts-family);
+  width: 98%;
+  padding: 5px;
+  margin: 5px;
+}
+
+/* --- New CSS */
+@media screen and (min-width: 1651px) {
+  .project-details .adminImg1 {
+    width: 40%;
+    padding: 5px;
+  }
+}
+@media screen and (max-width: 1650px) {
+  .filesGrid {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .project-details {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .project-details .adminImg1 {
+    width: 20%;
+    padding: 5px;
+  }
+}
+
+@media screen and (max-width: 1360px) {
+  .filesGrid {
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 5px;
+    margin: 3px;
+  }
+  .filesGrid .file-image-container .fileImg1 {
+    height: 45px;
+  }
+}
+
+/* --- New CSS */
+
 @media screen and (max-width: 1200px) {
+  .project-details {
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .project-details .adminImg1 {
+    width: 40%;
+    padding: 5px;
+}
+  .filesGrid {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+  .filesGrid .nofilefoundDiv h1 {
+    font-size: 28px;
+  }
   .headesidebar {
     display: flex !important;
   }
@@ -432,5 +517,75 @@ h6,
     justify-content: center;
     margin-bottom: 5px;
   }
+}
 
+@media screen and (max-width: 768px) {
+  .filesGrid {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+  .project-details {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .project-details .adminImg1 {
+    width: 25%;
+    padding: 5px;
+  }
+  .file-image-container .fileImg1 {
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    object-fit: contain;
+  }
+  
+}
+
+@media screen and (max-width: 550px) {
+  .file-grid-item .upload-file-main button svg {
+    scale: 0.8;
+  }
+  .file-grid-item .upload-file-main svg {
+    scale: 1.2;
+  }
+  .file-image-container .fileImg1 {
+    width: 40px;
+    height: 40px;
+  }
+  .filesGrid .nofilefoundDiv h1 {
+    font-size: 22px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .filesGrid {
+    grid-template-columns: 1fr 1fr;
+  }
+  .project-details .adminImg1 {
+    width: 30%;
+    padding: 5px;
+  }
+}
+@media screen and (max-width: 440px) {
+  .file-grid-item .upload-file-main button svg {
+    scale: 0.9;
+  }
+  .file-grid-item .upload-file-main svg {
+    scale: 1.2;
+  }
+  .file-image-container .fileImg1 {
+    width: 30px;
+    height: 30px;
+  }
+  .project-details {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+@media screen and (max-width: 350px) {
+  .filesGrid .nofilefoundDiv h1 {
+    font-size: 14px;
+  }
+  .filesGrid {
+    width: 95%;
+    grid-template-columns: 1fr;
+    padding: 7px;
+  }
 }
