chat name in chat list and version error fixed, Slide is pending

--- a/frontend/src/layouts/chats/style.css
+++ b/frontend/src/layouts/chats/style.css
@@ -270,6 +270,8 @@ h6,
 .file-image-container .fileImg1 {
   width: 100%;
   height: 60px;
+  object-fit: contain;
+  aspect-ratio: 1.8;
   cursor: pointer;
 }
 
@@ -451,13 +453,24 @@ h6,
 }
 .project-details-3 {
   grid-template-columns: repeat(1, 1fr);
-
 }
 .project-details .project-details-div {
   font-family: var(--fonts-family);
   width: 98%;
   padding: 5px;
   margin: 5px;
+}
+
+.h1-style {
+  font-family: var(--fonts-family);
+  position: absolute;
+  display: block;
+  width: 104%;
+  text-align: center;
+  top: 40%;
+  font-size: 5rem;
+  color: #fff;
+  z-index: 0;
 }
 
 /* --- New CSS */
@@ -477,6 +490,9 @@ h6,
   .project-details .adminImg1 {
     width: 20%;
     padding: 5px;
+  }
+  .h1-style {
+    font-size: 4.5rem;
   }
 }
 
@@ -500,7 +516,7 @@ h6,
   .project-details .adminImg1 {
     width: 40%;
     padding: 5px;
-}
+  }
   .filesGrid {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
@@ -536,7 +552,9 @@ h6,
     cursor: pointer;
     object-fit: contain;
   }
-  
+  .h1-style {
+    font-size: 4rem;
+  }
 }
 
 @media screen and (max-width: 550px) {
@@ -553,6 +571,9 @@ h6,
   .filesGrid .nofilefoundDiv h1 {
     font-size: 22px;
   }
+  .h1-style {
+    font-size: 4rem;
+  }
 }
 
 @media screen and (max-width: 500px) {
@@ -562,6 +583,9 @@ h6,
   .project-details .adminImg1 {
     width: 30%;
     padding: 5px;
+  }
+  .h1-style {
+    font-size: 3.5rem;
   }
 }
 @media screen and (max-width: 440px) {
@@ -577,6 +601,10 @@ h6,
   }
   .project-details {
     grid-template-columns: repeat(1, 1fr);
+  }
+  .h1-style {
+    font-size: 2.5rem;
+    left: -10px;
   }
 }
 @media screen and (max-width: 350px) {
