--- a/frontend/src/examples/Navbars/NewDesign/navbar-style.css
+++ b/frontend/src/examples/Navbars/NewDesign/navbar-style.css
@@ -109,6 +109,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    background-color: #f0f2f5;
   }
   .grid-3 {
     padding-top: 10px;
