--- a/frontend/src/examples/Navbars/NewDesign/navbar-style.css
+++ b/frontend/src/examples/Navbars/NewDesign/navbar-style.css
@@ -40,6 +40,19 @@
   cursor: pointer;
   text-align: center;
 }
+.grid-3 .btn-container, .grid-2 .btn-container {
+  position : relative;
+}
+
+.notifications-point {
+  position: absolute;
+  padding: 6px;
+  top: 6px;
+  right : 5px;
+  border-radius: 30px;
+  background-color: var(--yellow-color);
+}
+
 
 .btn-container svg {
   fill: var(--header-color);
@@ -94,14 +107,6 @@
   display: none;
 }
 
-.notifications-point {
-  position: absolute;
-  padding: 6px;
-  top: 6;
-  right: 6;
-  border-radius: 30px;
-  background-color: var(--yellow-color);
-}
 
 /* new navbar design test */
 
@@ -120,6 +125,11 @@
     align-items: center;
     gap: 12px;
     padding-right: 30px;
+  }
+  .grid-2 .btn-container .notifications-point, .grid-3 .btn-container .notifications-point {
+    padding: 5px;
+    top : 2px;
+    right : 2px;
   }
   .grid-2 .grid-2-box .btn-container,
   .grid-2 .grid-2-box .create-project-btn {
@@ -173,6 +183,9 @@
 @media screen and (max-width: 991px) {
   .grid-container {
     padding-block: 20px;
+  }
+  .grid-3 .btn-container .notifications-point {
+    padding: 4px;
   }
 }
 /* new navbar design test */
