--- a/frontend/src/examples/image-modal/modal-style.css
+++ b/frontend/src/examples/image-modal/modal-style.css
@@ -1,57 +1,27 @@
-.image-container {
-  position: relative;
-  background-color: transparent;
-}
-
-.image {
-  width: 100%;
-  height: auto;
-  object-fit: contain;
-  aspect-ratio: 1.6;
-}
-
-.close-button {
-  position: absolute !important;
-  background-color: #fff !important;
-  top: 0px;
-  display: none;
-  right: 78px;
-}
-
-.left-arrow,
-.right-arrow {
-  position: absolute !important;
-  top: 50%;
-  transform: translateY(-50%);
-  color: #fff;
-}
-
-.left-arrow svg,
-.right-arrow svg {
-  scale: 2.3;
-  fill: white;
-}
-
-.left-arrow {
-  left: 8px;
-}
-
-.right-arrow {
-  right: 8px;
-}
-
-@media screen and (max-width: 991px) {
-  .close-button {
-    right: 43px;
-    width: 25px;
-    height: 25px;
+@media screen and (min-width: 991px) {
+  .ril-inner .ril-image-current {
+    width: 660px;
   }
-  .close-button svg {
+}
+@media screen and (max-width: 990px) {
+  .ril-inner .ril-image-current {
+    scale: 0.7;
+    /* margin-right: -299px  */
+  }
+}
+@media screen and (max-width: 850px) {
+  .ril-inner .ril-image-current {
     scale: 0.8;
+    /* margin-right: -299px  */
   }
-
-  .left-arrow svg,
-  .right-arrow svg {
-    scale: 1.3;
+}
+@media screen and (max-width: 768px) {
+  .ril-inner .ril-image-current {
+    scale: 0.9;
+  }
+}
+@media screen and (max-width: 600px) {
+  .ril-inner .ril-image-current {
+    scale: 1;
   }
 }
